--- a/views/facilities.html
+++ b/views/facilities.html
@@ -92,13 +92,13 @@
                 </div>
             </div>
         </nav>
-
-<div class="roomallowhead">
-    <h1 class="H11" style="margin-left: 12px; text-decoration: underline; margin-bottom: 0px;">Room allocations</h1>
+<div class="support">
+<div class=" supportcontent">
+    <h2 >Room allocations</h2>
     
-    <div class="llok" style="margin-top: 0px;">
-      <div class="llok-content">
-        <p class="platepnna">For the academic session 2025–26, this hostel has been primarily allotted
+      <img src="/images/309.jpeg" alt="Room allocation overview and facilities" loading="lazy">
+      
+        <p >For the academic session 2025–26, this hostel has been primarily allotted
         to first-year (fresher) students of the institute, helping them begin their college life in a safe, organized,
         and supportive residential environment.
 
@@ -111,11 +111,12 @@
         at NIT Kurukshetra.</p>
      
 
-    </div>
-      <div class="phokoi">
-        <img src="/images/309.jpeg" alt="Room allocation overview and facilities" loading="lazy">
-      </div>
-    </div>
+  
+ 
+      
+     
+    
+</div>
 </div>
 <div class="support">
 <h2 class="supporthead">Facilities and Support</h2>
