--- a/public/css/facilities.css
+++ b/public/css/facilities.css
@@ -62,14 +62,18 @@
 } */
 
 .platepnna {
+   color: #000000;
   font-family: 'Raleway', sans-serif;
-  font-size: 1.1rem;
+
+  
   line-height: 1.8;
-  color: #2c3e50;
+
   text-align: justify;
   margin: 0;
   letter-spacing: 0.5px;
-  font-weight: 400;
+  font-size: 1.8rem;
+ 
+  font-weight: 600;
 }
 
 .phokoi {
